add styles for additional catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -152,8 +152,9 @@
 				</div></li>
 		</ul>
 	</section>
-	<section class="additional-catalog page__centerer">
-		<h2 class="additional-catalog__label">Дополнительные товары</h2>
+	<div class="additional-catalog page__centerer">
+		<h2 class="additional-catalog__label">
+			<span class="heading__decorated">Дополнительные товары</span></h2>
 		<div class="additional-catalog__wrapper">
 			<ul class="additional-catalog__list">
 				<li class="additional-catalog__item additional-product-card">
@@ -192,14 +193,15 @@
 			</ul>
 			<article class="additional-catalog__promotion promotion">
 				<h3 class="visually-hidden">Промоакция</h3>
-				<p class="promotion__description">Закажите все
-					и получите чехол для
+				<p class="promotion__description">Закажите все<br>
+					и получите чехол для<br>
 					кота в подарок!</p>
 
 			</article>
 		</div>
+	</div>
 	</section>
-	<section class="cooperation">
+	<section class="cooperation cooperation--background">
 		<div class="cooperation__adress-wrapper page__centerer">
 			<h2 class="cooperation__title">приглашаем
 				к сотрудничеству
