--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,174 +10,172 @@
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
 					<a class="product-card__link" href="#">
-						<h3 class="product-card__label">Cat Energy PRO
-							500 г</h3>
+						<h3 class="product-card__label">Cat Energy PRO 500 г</h3>
 					</a>
 					<a class="product-card__link-img" href="#">
 						{% include "templates/picture.twig" with {name: "products/1", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 					</a>
 					<div class="product-card__description">
 						<p class="product-card__description-item">Масса</p>
-						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-value">500 г</p>
 						<p class="product-card__description-item">Вкус</p>
 						<p class="product-card__description-value">Курица</p>
 						<p class="product-card__description-item">Цена</p>
-						<p class="product-card__description-value">700 ₽</p>
+						<p class="product-card__description-value">700 ₽</p>
 					</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+					<a class="product-card__button button" href="#">Заказать</a>
+				</div>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy PRO
-						1000 г</h3>
-				</a>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy PRO 1000 г</h3>
+					</a>
 					<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/2", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">1000 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Курица</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">1000 ₽</p>
+						{% include "templates/picture.twig" with {name: "products/2", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Курица</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">1000 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy PRO
-						500 г</h3></a>
-				<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/3", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">500 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Рыба</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">700 ₽</p>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy PRO 500 г</h3>
+					</a>
+					<a class="product-card__link-img" href="#">
+						{% include "templates/picture.twig" with {name: "products/3", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рыба</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">700 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy PRO
-						1000 г</h3></a>
-						<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/4", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">1000 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Рыба</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">1000 ₽</p>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy PRO 1000 г</h3>
+					</a>
+					<a class="product-card__link-img" href="#">
+						{% include "templates/picture.twig" with {name: "products/4", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рыба</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">1000 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy slim
-						500 г</h3></a>
-						<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/5", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">500 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Гречка</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">400 ₽</p>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy slim 500 г</h3>
+					</a>
+					<a class="product-card__link-img" href="#">
+						{% include "templates/picture.twig" with {name: "products/5", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Гречка</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">400 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy slim
-						1000 г</h3></a>
-						<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/6", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">1000 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Гречка</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">700 ₽</p>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy slim 1000 г</h3>
+					</a>
+					<a class="product-card__link-img" href="#">
+						{% include "templates/picture.twig" with {name: "products/6", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Гречка</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">700 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item product-card">
 				<div class="product-card__wrapper">
-				<a class="product-card__link" href="#">
-					<h3 class="product-card__label">Cat Energy slim
-						500 г</h3></a>
-						<a class="product-card__link-img" href="#">
-					{% include "templates/picture.twig" with {name: "products/7", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
-				</a>
-				<div class="product-card__description">
-					<p class="product-card__description-item">Масса</p>
-					<p class="product-card__description-value">500 г</p>
-					<p class="product-card__description-item">Вкус</p>
-					<p class="product-card__description-value">Рис</p>
-					<p class="product-card__description-item">Цена</p>
-					<p class="product-card__description-value">500 ₽</p>
+					<a class="product-card__link" href="#">
+						<h3 class="product-card__label">Cat Energy slim 500 г</h3>
+					</a>
+					<a class="product-card__link-img" href="#">
+						{% include "templates/picture.twig" with {name: "products/7", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+					</a>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рис</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">500 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 				</div>
-				<a class="product-card__button button" href="#">Заказать</a>
-
-				</div></li>
+			</li>
 			<li class="catalog__card-item card-show-more">
 				<div class="card-show-more__wrapper">
-				<h3 class="card-show-more__label">Показать еще
-					100500 товаров</h3>
-				<p class="card-show-more__description">На самом деле вкусов
-					гораздо больше!</p>
-				<a class="card-show-more__button" aria-current="page" href="catalog.html">Показать все</a>
-				</div></li>
+					<h3 class="card-show-more__label">Показать еще 100500 товаров</h3>
+					<p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
+					<a class="card-show-more__button" aria-current="page" href="catalog.html">Показать все</a>
+				</div>
+			</li>
 		</ul>
 	</section>
-	<div class="additional-catalog page__centerer">
-		<h2 class="additional-catalog__label">
-			<span class="heading__decorated">Дополнительные товары</span></h2>
+	<section class="additional-catalog page__centerer">
+		<h2 class="additional-catalog__label heading">
+			<span class="heading__decorated">Дополнительные товары</span>
+		</h2>
 		<div class="additional-catalog__wrapper">
 			<ul class="additional-catalog__list">
 				<li class="additional-catalog__item additional-product-card">
 					<h3 class="additional-product-card__label">Сахарозаменитель</h3>
 					<div class="additional-product-card__discription">
-						<p class="additional-product-card__quantity">1 упаковка (100 г)</p>
-						<p class="additional-product-card__price">200 ₽</p>
+						<p class="additional-product-card__quantity">1 упаковка (100 г)</p>
+						<p class="additional-product-card__price">200 ₽</p>
 					</div>
 					<a class="additional-product-card__button button" href="#">Заказать</a>
 				</li>
 				<li class="additional-catalog__item additional-product-card">
 					<h3 class="additional-product-card__label">Питьевая вода</h3>
 					<div class="additional-product-card__discription">
-						<p class="additional-product-card__quantity">5 литров</p>
-						<p class="additional-product-card__price">50 ₽</p>
+						<p class="additional-product-card__quantity">5 литров</p>
+						<p class="additional-product-card__price">50 ₽</p>
 					</div>
 					<a class="additional-product-card__button button" href="#">Заказать</a>
 				</li>
 				<li class="additional-catalog__item additional-product-card">
 					<h3 class="additional-product-card__label">Молоко</h3>
 					<div class="additional-product-card__discription">
-						<p class="additional-product-card__quantity">1 литр</p>
-						<p class="additional-product-card__price">100 ₽</p>
+						<p class="additional-product-card__quantity">1 литр</p>
+						<p class="additional-product-card__price">100 ₽</p>
 					</div>
 					<a class="additional-product-card__button button" href="#">Заказать</a>
 				</li>
@@ -185,34 +183,23 @@
 
 					<h3 class="additional-product-card__label">Витамины</h3>
 					<div class="additional-product-card__discription">
-						<p class="additional-product-card__quantity">1 упаковка (30 г)</p>
-						<p class="additional-product-card__price">300 ₽</p>
+						<p class="additional-product-card__quantity">1 упаковка (30 г)</p>
+						<p class="additional-product-card__price">300 ₽</p>
 					</div>
 					<a class="additional-product-card__button button" href="#">Заказать</a>
 				</li>
 			</ul>
 			<article class="additional-catalog__promotion promotion">
 				<h3 class="visually-hidden">Промоакция</h3>
-				<p class="promotion__description">Закажите все<br>
-					и получите чехол для<br>
-					кота в подарок!</p>
-
+				<p class="promotion__description">
+					Закажите все<br>
+					и получите чехол для<br>
+					кота в подарок!
+				</p>
 			</article>
 		</div>
-	</div>
 	</section>
-	<section class="cooperation cooperation--background">
-		<div class="cooperation__adress-wrapper page__centerer">
-			<h2 class="cooperation__title">приглашаем
-				к сотрудничеству
-				дилеров!</h2>
-			<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
-				Санкт-Петербург</p>
-		</div>
-		<div class="cooperation__adress-map map">
-			{% include "templates/picture.twig" with {name: "map", class: "map__img", alt: "Точка на карте по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8."} %}
-			<iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586862!2d30.320853351538165!3d59.93871648178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1672084773520!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-		</div>
-	</section>
+
+	{% include "./templates/cooperation.twig" %}
 </main>
 {% endblock %}
