--- a/source/index.html
+++ b/source/index.html
@@ -6,13 +6,15 @@
 <main class="main-container">
 	<section class="cat-energy-description">
 		<div class="cat-energy-description__wrapper">
-			<h1 class="cat-energy-description__title">Функциональное<br>
-				питание для котов</h1>
+			<h1 class="cat-energy-description__title">
+				Функциональное<br>
+				питание для котов
+			</h1>
 			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
-			<a class="cat-energy-description__button button page__centerer" href="form.html">подобрать программу</a>
+			<a class="cat-energy-description__button button page__centerer" href="form.html">Подобрать программу</a>
 		</div>
 		<div class="cat-energy-description__img-wrapper">
-		{% include "templates/picture.twig" with {name: "can", class: "cat-energy-description__img", alt: "Корм Cat Energy Pro со вкусом курицы."} %} </div>
+			{% include "templates/picture.twig" with {name: "can", class: "cat-energy-description__img", alt: "Корм Cat Energy Pro со вкусом курицы."} %} </div>
 	</section>
 	<ul class="program-type page__centerer">
 		<li class="program-type__card program-type__card--slim">
@@ -30,76 +32,65 @@
 		<h2 class="advantages__title">Как это работает</h2>
 		<ul class="advantages__list">
 			<li class="advantages__item advantages__item--icon-leaf">
-				Функциональное питание содержит только полезные питательные вещества.</li>
-			<li class="advantages__item advantages__item--icon-pot">Выпускается в виде порошка,
-				который нужно лишь залить
-				кипятком и готово.
+				Функциональное питание содержит только полезные питательные вещества.
+			</li>
+			<li class="advantages__item advantages__item--icon-pot">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
 			</li>
 			<li class="advantages__item advantages__item--icon-cutlery">
-				Замените один-два приема
-				обычной еды на наше
-				функциональное питание.
+				Замените один-два приема обычной еды на наше функциональное питание.
 			</li>
 			<li class="advantages__item advantages__item--icon-alarm">
-				Уже через месяц наслаждайтесь
-				изменениями к лучшему
-				вашего питомца!
+				Уже через месяц наслаждайтесь изменениями к лучшему<span class="line-feed"></span> вашего питомца!
 			</li>
 		</ul>
 	</section>
 	<section class="example">
 		<h2 class="example__title page__centerer">Живой пример</h2>
 		<div class="example__main-wrapper">
-		<div class="example__wrapper page__centerer">
-			<div class="example__text-wrapper">
-				<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-				<dl class="example__result-list">
-					<div class="example__result-item example__result-item--item">
-						<dt class="example__result-description example__result-description--item">Снижение веса</dt>
-						<dd class="example__result-number example__result-number--item">5 кг</dd>
-					</div>
-					<div class="example__result-item example__result-item--item">
-						<dt class="example__result-description example__result-description--item">Затрачено времени</dt>
-						<dd class="example__result-number example__result-number--item">60 дней</dd>
-					</div>
-					<div class="example__result-item example__result-item--total ">
-						<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
-						<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
-					</div>
-				</dl>
-			</div>
-
-			<figure class="example__slider before-after-slider">
-				<figcaption class="before-after-slider__description visually-hidden">Кот Борис до и после 2 месяцев питания кормом Cat Energy Slim.</figcaption>
-			<div class="before-after-slider__wrapper slider" style="--curtain-place: 0.5;">
-			<div class="before-after-slider__image slider__image slider__image--state_before">
-				{% include "templates/picture.twig" with {name: "slide-before", class: "before-after-slider__image", alt: "Толстый кот до похудения."} %}
-			 </div>
-				<div class="slider__curtain">
-					<button class="slider__thumb" type="button">
-						<span class="visually-hidden">Ползунок слайдера</span>
-					</button>
+			<div class="example__wrapper page__centerer">
+				<div class="example__text-wrapper">
+					<p class="example__description">
+						Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+					</p>
+					<dl class="example__result-list">
+						<div class="example__result-item example__result-item--item">
+							<dt class="example__result-description example__result-description--item">Снижение веса</dt>
+							<dd class="example__result-number example__result-number--item">5 кг</dd>
+						</div>
+						<div class="example__result-item example__result-item--item">
+							<dt class="example__result-description example__result-description--item">Затрачено времени</dt>
+							<dd class="example__result-number example__result-number--item">60 дней</dd>
+						</div>
+						<div class="example__result-item example__result-item--total ">
+							<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
+							<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
+						</div>
+					</dl>
 				</div>
-			<div class="slider__after">
-				{% include "templates/picture.twig" with {name: "slide-after", class: "before-after-slider__image slider__image slider__image--state_after", alt: "Худой кот после похудения."} %}</div></div>
-			</figure>
-		</div>
-		</div>
-		</section>
 
-	<section class="cooperation">
-		<div class="cooperation__adress-wrapper page__centerer">
-			<h2 class="cooperation__title">приглашаем
-				к сотрудничеству
-				дилеров!</h2>
-			<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
-				Санкт-Петербург</p>
-		</div>
-		<div class="cooperation__adress-map map">
-			{% include "templates/picture.twig" with {name: "map", class: "map__img", alt: "Точка на карте по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8."} %}
-			<iframe class="map__iframe disabled" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586862!2d30.320853351538165!3d59.93871648178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1672084773520!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<figure class="example__slider before-after-slider">
+					<figcaption class="before-after-slider__description visually-hidden">
+						Кот Борис до и после 2 месяцев питания кормом Cat Energy Slim.
+					</figcaption>
+					<div class="before-after-slider__wrapper slider" style="--curtain-place: 0.5;">
+						<div class="before-after-slider__image slider__image slider__image--state_before">
+							{% include "templates/picture.twig" with {name: "slide-before", class: "before-after-slider__image", alt: "Толстый кот до похудения."} %}
+						</div>
+						<div class="slider__curtain">
+							<button class="slider__thumb" type="button">
+								<span class="visually-hidden">Ползунок слайдера</span>
+							</button>
+						</div>
+						<div class="slider__after">
+							{% include "templates/picture.twig" with {name: "slide-after", class: "before-after-slider__image slider__image slider__image--state_after", alt: "Худой кот после похудения."} %}
+						</div>
+					</div>
+				</figure>
+			</div>
 		</div>
 	</section>
+
+	{% include "./templates/cooperation.twig" %}
 </main>
 
 {% endblock %}
