--- a/source/form.html
+++ b/source/form.html
@@ -28,8 +28,8 @@
 				</div>
 			</div>
 			<div class="program-goal" role="group" aria-describedby="program-goal">
-				<div class="page__centerer program-goal-wrapper-desktop program-goal-wrapper">
-					<div class="program-goal-wrapper">
+				<div class="page__centerer program-goal__wrapper-desktop">
+					<div class="program-goal__wrapper">
 						<div class="visually-hidden" id="program-goal">Цель программы</div>
 						<label class="program-goal__item-label">
 							<input class="program-goal__item" type="radio" name="program-goal" value="lose weight" checked>
