add show more card

--- a/source/form.html
+++ b/source/form.html
@@ -56,12 +56,14 @@
 				</div>
 				<div class="contacts__wrapper">
 					<div class="contacts__item">
-						<label class="contacts__label contacts__label--email label" for="email">E-mail:<span aria-hidden="true">*</span></label>
+						<label class="contacts__label label" for="email">E-mail:<span aria-hidden="true">*</span></label>
 						<input class="contacts__email field" id="email" name="email" type="text" placeholder="кuklachev@gmail.com" required>
+						<span class="contacts__icon contacts__icon--email"></span>
 					</div>
 					<div class="contacts__item">
-						<label class="contacts__label contacts__label--phone label" for="phone">Телефон:<span aria-hidden="true">*</span></label>
+						<label class="contacts__label label" for="phone">Телефон:<span aria-hidden="true">*</span></label>
 						<input class="contacts__phone field" id="phone" name="phone" type="number" placeholder="8 (960) 900-60-90" required>
+						<span class="contacts__icon contacts__icon--phone"></span>
 					</div>
 				</div>
 			</div>
