--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,7 @@
 						<dd class="example__result-value cartouche__value">60 дней</dd>
 					</div>
 					<div class="example__result-item example__result-item--total ">
-						<dt class="example__result-key">Затраты на питание:</dt>
+						<dt class="example__result-key">Затраты на питание</dt>
 						<dd class="example__result-value">15 000 РУБ.</dd>
 					</div>
 				</dl>
