--- a/source/form.html
+++ b/source/form.html
@@ -57,7 +57,7 @@
 				<div class="contacts__wrapper">
 					<div class="contacts__item">
 						<label class="contacts__label label" for="email">E-mail:<span aria-hidden="true">*</span></label>
-						<input class="contacts__email field" id="email" name="email" type="text" placeholder="кuklachev@gmail.com" required>
+						<input class="contacts__email field" id="email" name="email" type="email" placeholder="кuklachev@gmail.com" required>
 						<span class="contacts__icon contacts__icon--email"></span>
 					</div>
 					<div class="contacts__item">
