--- a/source/catalog.html
+++ b/source/catalog.html
@@ -191,11 +191,9 @@
 			</ul>
 			<article class="additional-catalog__promotion promotion">
 				<h3 class="visually-hidden">Промоакция</h3>
-				<p class="promotion__description">
-					Закажите все<br>
-					и получите чехол для<br>
-					кота в подарок!
-				</p>
+				<div class="promotion__description">
+					<p>Закажите все и получите чехол для кота в подарок!</p>
+				</div>
 			</article>
 		</div>
 	</section>
