fix form heading

--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
 <main class="main-container">
 
 	<section class="form page__centerer">
-		<h1 class="form__title">Подбор программы</h1>
+		<h1 class="form__title heading heading--lvl_1">Подбор программы</h1>
 		<p class="form__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 	</section>
 
